--- a/app/views/searches/_results.html.erb
+++ b/app/views/searches/_results.html.erb
@@ -4,8 +4,10 @@
 <div id="results" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 	<table class='table table-hover'>
 		<thead>
-			<%= content_tag(:th, sort_link(@search, :title, {}), class: 'col-lg-4') %>
-			<%= content_tag(:th, sort_link(@search, :authors_au_fname, 'Authors', class: 'col-lg-4')) %>
+			<% if(false) %>
+				<%= content_tag(:th, sort_link(@search, :title, {}), class: 'col-lg-4') %>
+				<%= content_tag(:th, sort_link(@search, :authors_au_fname, 'Authors', class: 'col-lg-4')) %>
+			<% end %>
 			<%= content_tag(:th, sort_link(@search, :post_price, {}), class: 'col-lg-1') %>
 			<%= content_tag(:th, sort_link(@search, :created_at, "Posted"), class: 'col-lg-4') %>
 		</thead>
