--- a/app/views/user_accounts/edit.html.erb
+++ b/app/views/user_accounts/edit.html.erb
@@ -1,3 +1,7 @@
-<h1>Editing User Account</h1>
+<div class="container">
 
-<%= render 'form' %>
+	<h1 class="text-center">Editing User Account</h1>
+
+	<%= render 'form' %>
+
+</div>
