--- a/app/views/user_accounts/show.html.erb
+++ b/app/views/user_accounts/show.html.erb
@@ -1,14 +1,13 @@
-<h3 style="display:inline-block"><%= current_user_account.email %></h3>
-<%= link_to '[edit]', edit_user_account_path %>
-
-<h1>Posting History</h1>
 <div class="container">
-  <table class="table">
+  <h1>History</h1>
+  <h3 style="display:inline-block"><%= current_user_account.email %></h3>
+  <%= link_to '[edit]', edit_user_account_path %>
+  <table class="table table-hover">
     <thead>
       <tr>
         <th>Book</th>
         <th>Status</th>
-        <th>Date Posted</th>
+        <%= content_tag(:th, sort_link(@search, :created_at, "Posted")) %>
         <th colspan="3"></th>
       </tr>
     </thead>  
@@ -16,29 +15,25 @@
     <tbody>
       <% if current_user_account.books.empty? %>
         <tr> <td> No books posted </td> </tr>
-      <% end %>
-      <% current_user_account.books.sort_by(&:created_at).each do |book| %>
-        <tr class="<%= book.active ? '' : 'danger' %>">
-          <td><%= link_to book.title, book %></td>
-          <td>
-            <% if book.active %>
-              Posted
-            <% else %>
-              Expired
-              <%= link_to 'Repost', repost_path(id: book.id) %>
-            <% end %>
-          </td>
-          <td> <%= Time.at(book.created_at).to_formatted_s(:long) %> </td>
-          <td><%= link_to 'Edit', edit_book_path(book) %></td>
-          <td><%= link_to 'Destroy', book, id: current_user_account.id, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
+      <% else %>
+        <% @results.each do |book| %>
+          <tr class="<%= book.active ? '' : 'danger' %>">
+            <td><%= link_to book.title, book %></td>
+            <td>
+              <% if book.active %>
+                Posted
+              <% else %>
+                Expired
+                <%= link_to 'Repost', repost_path(id: book.id) %>
+              <% end %>
+            </td>
+            <td> <%= Time.at(book.created_at).to_formatted_s(:long) %> </td>
+            <td><%= link_to 'Edit', edit_book_path(book) %></td>
+            <td><%= link_to 'Destroy', book, id: current_user_account.id, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
       <% end %>
     </tbody>
   </table>
-</div>
-
-<br>
-
-<%= link_to 'Delete my account', current_user_account, method: :delete, data: { confirm: 'Are you sure?' }  %>
-
+    <%= link_to 'Delete my account', current_user_account, style: "color: white;", class: "btn btn-danger btn-delete", method: :delete, data: { confirm: 'Are you sure?' }  %> 
 </div>
