--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -2,18 +2,7 @@
 <div class="container">
 	<%= form_for @book do |f| %>
 
-	<% if @book.errors.any? %>
-		<div id="error_explanation">
-			<h2> <%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved: </h2>
-
-			<ul>
-				<% @book.errors.full_messages.each do |message| %>
-
-					<li><%= message %></li>
-				<% end %>
-			</ul>
-		</div>
-	<% end %>
+	<%= render 'shared/error_messages' %>
 
 	<div class="form-inline">
 		<div class="form-group">
@@ -78,7 +67,7 @@
 		</div>
 		<% end %>
 		
-		<%= f.submit 'Submit', class: "btn btn-default" %>
+		<%= f.submit 'Submit', class: "btn btn-block btn-default" %>
 	<% end %>
 </div>
 
