--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,4 @@
-<h1 class="text-center">Edit Your Book</h1>
-<%= render 'form' %>
+<div class="container">
+	<h1 class="">Edit Your Book</h1>
+	<%= render 'form' %>
+</div>
