--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,73 +1,54 @@
-<%= javascript_include_tag :application, :cache => true %>
 <div class="container">
 	<%= form_for @book do |f| %>
 
 	<%= render 'shared/error_messages' %>
 
-	<div class="form-inline">
-		<div class="form-group">
-			<%= f.text_field :title, placeholder: 'Title', class: "form-control" %>
-		</div>
-		<div class="form-group">
-			<%= f.text_field :volume, placeholder: 'Volume', class: "form-control"  %>
-		</div>
-		<div class="form-group">
-			<%= f.text_field :edition, placeholder: 'Edition', class: "form-control"  %>
-		</div>
+	<div class="form-inline row">
+		<%= f.fields_for :post do |p| %>
+			<div class="input-group col-sm-1, col-xs-2">
+				<%= p.text_field :price, placeholder: '$', class: "form-control invisible_input dynamic_size" %>
+			</div>
+			<div class="input-group col-sm-10, col-xs-5">
+				<%= f.text_field :title, placeholder: 'Tilte', class: "form-control invisible_input dynamic_size" %>
+			</div>
+
+			<div class="input-group col-sm-1, col-xs-2">
+				<%= f.text_field :volume, placeholder: 'Vol.', class: "form-control invisible_input" %>
+			</div>
+			<div class="input-group col-sm-1, col-xs-2">
+				<%= f.text_field :edition, placeholder: 'Ed.', class: "form-control invisible_input"  %>
+			</div>
+
+		<% end %>
 	</div>
 
-		<%= f.hidden_field :user_account_id, :value => current_user_account.id %>
+	<%= f.hidden_field :user_account_id, :value => current_user_account.id %>
 
+	<div id="authors" class="dynamic_inputs">
 		<%= f.fields_for :author_books do |ab| %>
-		<div class="form-inline">
-			<%= ab.fields_for :author do |a| %>
-				<div class="form-group">
-					<%= a.text_field :au_fname, placeholder: 'Author First Name' , class: "form-control"  %>
-				</div>
-
-				<div class="form-group">
-					<%= a.text_field :au_lname, placeholder: 'Author Last Name', class: "form-control"  %>
-				</div>
-			<% end %>
-			<div class="form-group">
-				<%= ab.hidden_field :_destroy %>
-				<%= link_to "", "#", class: "remove_field glyphicon glyphicon-trash" %>
-			</div>
-		</div>
+			<%= render 'author_book_fields', :f => ab %>
 		<% end %>
-		<%= f.submit 'Add author', :name => "add_author", class: "btn btn-default" %>
+	</div>
+	
+	<p><%= link_to_add_fields "Add Author", f, :author_books %></p>
 
+
+	<%= f.fields_for :post do |p| %>
+		<div class="form-group row">
+			<%= p.text_area :description, placeholder: 'Add a description here (must be longer than 15 characters).', id: "description", class: "form-control input_description dynamic_height" %>
+		</div>
+	<% end %>
+
+	<div id="courses" class="dynamic_inputs">
 		<%= f.fields_for :book_courses do |bc| %>
-		<div class="form-inline">
-			<%= bc.fields_for :course do |c| %>
-				<div class="form-group">
-					<%= c.text_field :department, placeholder: 'Department', class: "form-control"  %>
-				</div>
-				<div class="form-group">
-					<%= c.text_field :course_number, placeholder: 'Course #', class: "form-control"  %>
-				</div>
-				<div class="form-group">
-					<%= bc.hidden_field :_destroy %>
-				    <%= link_to "", "#", class: "remove_field glyphicon glyphicon-trash" %>
-				</div>
-			<% end %>
-		</div>
-		<% end %>
-		<%= f.submit 'Add course', :name => "add_course", class: "btn btn-default" %> <br>
+			<%= render 'book_course_fields', :f => bc %>
+		<% end %>			
+	</div>
 
-		<%= f.fields_for :post do |p| %>
-		<div class="form-inline">
-			<div class="input-group">
-				 <div class="input-group-addon">$</div>
-				<%= p.text_field :price, placeholder: 'Price', class: "form-control"  %>
-			</div>
-			<div class="form-group">
-				<%= p.text_area :description, placeholder: 'Description', rows: "3", class: "form-control"  %>
-			</div>
-		</div>
-		<% end %>
+	<p><%= link_to_add_fields "Add Course", f, :book_courses %></p>
 		
-		<%= f.submit 'Submit', class: "btn btn-block btn-default" %>
+	<%= f.submit 'Submit', class: "btn btn-block btn-default" %>
+
 	<% end %>
 </div>
 
