--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,2 +1,4 @@
-<h1 class="text-center">Create Your Book</h1>
-<%= render 'form' %>
+<div class="container">
+	<h1>Create Your Book</h1>
+	<%= render 'form' %>
+</div>
