--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,22 +7,22 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">BookL</a>
+      <p class="navbar-brand" >BookL</p>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li ><%= link_to "View Posts" , search_path%></li>             
+        <li ><%= link_to "Search" , books_path%></li>             
 
         <li>
-          <%= link_to_unless logged_in? == false, "New Post", new_book_path do
-            link_to "New Post", login_path
+          <%= link_to_unless logged_in? == false, "Post", new_book_path do
+            link_to "Post", login_path
             end%>
           </li>
 
 
           <li ><%= link_to "About" , about_path%></li>
           <% if admin %>
-          <li><%= link_to "Admin View", admin_path %></li>    
+          <li><%= link_to "Admin", admin_path %></li>    
           <% end %>
         </ul>
         <ul class="nav navbar-nav navbar-right">
