--- a/app/views/user_accounts/new.html.erb
+++ b/app/views/user_accounts/new.html.erb
@@ -1,3 +1,6 @@
-<h1>New User Account</h1>
-
-<%= render 'form' %>
+<div class="container">
+	<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-md-offset-3">
+		<h1>New User Account</h1>
+		<%= render 'form' %>
+	</div>
+</div>
