--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -16,17 +16,17 @@
 	<div class="content">
 		<h1 class="book-authors">
 			<% auths = "" %>
-			<% @book.author_books.each do |ab| %>
-				<% auths += ab.author.au_fname + " " + ab.author.au_lname + ", " %>
+			<% @book.authors.each do |author| %>
+				<% auths += author.au_fname + " " + author.au_lname + ", " %>
 			<% end %>
 			<%= auths[0..-3] %>
 		</h1>
 		<h1 class="book-description"><%= @book.post.description %></h1>
 		<h1 class="book-courses">
 			<% cours = "" %>
-			<% @book.book_courses.each do |bc| %>
-				<% cours += bc.course.department + bc.course.course_number.to_s + ", " %>
-			<%end%>
+			<% @book.courses.each do |course| %>
+				<% cours += course.department + course.course_number.to_s + ", " %>
+			<% end %>
 			<%= cours[0..-3] %>
 		</h1>
 		<h1><a class="contact contact-info" href="#" data-email="<%= @book.user_account.email %>"> Contact Info</a></h1>
