--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-	<%= form_for @book do |f| %>
+	<%= form_for @book, html: {autocomplete: 'off'} do |f| %>
 
 	<%= render 'shared/error_messages' %>
 
