--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,10 +7,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <p class="navbar-brand" >TextBookr</p>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
+        <li class="navbar-brand" style="padding: 0px"> <%= link_to "TextBookr", root_path %></li>
         <li ><%= link_to "Search" , books_path%></li>             
 
         <li>
